--- a/attestation_1/sign-up.html
+++ b/attestation_1/sign-up.html
@@ -81,7 +81,7 @@
                         </div>
                         <div class="textarea-group form-sign__textarea-group">
                             <label for="about" class="textarea-group__label">О себе</label>
-                            <textarea id="about" class="textarea-group__input" name="about">Расскажите о себе</textarea>
+                            <textarea id="about" class="textarea-group__input" name="about" placeholder="Расскажите о себе"></textarea>
                         </div>
                         <div class="checkbox-group form-sign__checkbox-group">
                             <input id="agreement" type="checkbox" class="checkbox-group__input" name="agreement" />
