attestation_1 added gender value

--- a/attestation_1/sign-up.html
+++ b/attestation_1/sign-up.html
@@ -71,11 +71,11 @@
                         <div class="radio-group form-sign__radio-group">
                             <label class="radio-group__label">Пол</label>
                             <div class="radio-group__element">
-                                <input id="man" type="radio" class="radio-group__input" name="gender" />
+                                <input id="man" type="radio" class="radio-group__input" name="gender" value="man" />
                                 <label for="man" class="radio-group__element-label">Мужчина</label>
                             </div>
                             <div class="radio-group__element">
-                                <input id="woman" type="radio" class="radio-group__input" name="gender" />
+                                <input id="woman" type="radio" class="radio-group__input" name="gender" value="woman" />
                                 <label for="woman" class="radio-group__element-label">Женщина</label>
                             </div>
                         </div>
