added note for mentor

--- a/attestation_1/index.html
+++ b/attestation_1/index.html
@@ -1,3 +1,8 @@
+<!-- Внимание! Работа выполнена в соответствие с макетом, предоставленным преподавателем
+и здравым смыслом. В некоторых местах в макете есть неровности, например центрирование главной формы
+не везде по центру, отступы заголовков полей для форм ввода от края различаются на разных макетах. 
+В данной работе я не стремилась к 100% попаданию в макет, а стремилась к универсальности, в частности
+формы везде центрированы, а отступы приведены к одинаковому значению. -->
 <!DOCTYPE html>
 <html lang="ru">
     <head>
