homework_8 fixed errors

--- a/homework_8/index.html
+++ b/homework_8/index.html
@@ -18,17 +18,27 @@
                             <div id="alert"></div>
                         </div>
                         <div class="form__group">
-                            <input id="num-1" class="form__input form__num" type="text" autocomplete="off" />
+                            <input
+                                id="num-1"
+                                class="form__input form__num"
+                                type="text"
+                                placeholder="Введите число"
+                                autocomplete="off" />
                             <div class="form__sign-group">
-                                <input id="sign" class="form__input form__sign" type="text" autocomplete="off" />
+                                <input id="sign" class="form__input form__sign" type="text" placeholder="Знак" autocomplete="off" />
                                 <ul id="sign-list" class="form__sign-list">
                                     <li class="form__sign-item">+</li>
                                     <li class="form__sign-item">-</li>
-                                    <li class="form__sign-item">&times;</li>
+                                    <li class="form__sign-item">*</li>
                                     <li class="form__sign-item">/</li>
                                 </ul>
                             </div>
-                            <input id="num-2" class="form__input form__num" type="text" autocomplete="off" />
+                            <input
+                                id="num-2"
+                                class="form__input form__num"
+                                type="text"
+                                placeholder="Введите число"
+                                autocomplete="off" />
                             <span class="form__equals">=</span>
                             <input id="res" disabled class="form__input form__num" type="text" />
                         </div>
